# whatsapp_bot

./: .env.example  .gitignore  Assignment.md  Makefile  README.md  decision.md  docker-compose.yml
router/: Dockerfile  main.py  pyproject.toml
router/app/: __init__.py  main.py
router/app/api/: webhook.py
router/app/core/: config.py  logging_config.py
router/app/models/: schemas.py
router/app/services/: backend_service.py  whatsapp_service.py
router/app/utils/: parser.py
router/tests/: conftest.py  test_router.py
server/: Dockerfile  pyproject.toml
server/app/: __init__.py  main.py
server/tests/: test_server.py
